--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,13 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
+
+    //
+    configurations.all {
+        resolutionStrategy.force 'com.android.support:support-annotations:24.2.0'
+    }
+    //
+
     defaultConfig {
         applicationId "com.shay.test.countries.shaycountriestest"
         minSdkVersion 18
@@ -21,9 +28,7 @@ android {
 
 dependencies {
         compile fileTree(dir: 'libs', include: ['*.jar'])
-    //    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-    //        exclude group: 'com.android.support', module: 'support-annotations'
-    //    })
+
     compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta3'
     compile 'com.android.volley:volley:1.0.0'
@@ -32,6 +37,6 @@ dependencies {
     //unit test
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:1.10.19'
-    androidTestCompile 'com.android.support.test.espresso:espresso-core:3.0.1'
-    androidTestCompile 'com.android.support.test:runner:1.0.1'
+    //ui test
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
 }
